# Remarkable

./: .gitignore  LICENSE  PKGBUILD  README.md  glade.sh  install.sh  make_release.sh  md5sum  meson.build  meson_install.sh  remarkable-1.75.egg-info  remarkable-1.87.egg-info  remarkable.desktop  remarkable.repo  remarkable.spec  run.sh  setup.py  snapcraft.yaml
.github/: FUNDING.yml
aur/remarkable/: .SRCINFO  .gitignore  PKGBUILD  remarkable.install
data/: meson.build  remarkable.appdata.xml  styles.txt  styles.txt~
data/glib-2.0/schemas/: meson.build  net.launchpad.remarkable.gschema.xml
data/media/: MarkdownTutorial.md  highlight.min.js  meson.build
data/ui/: AboutRemarkableDialog.ui  InsertTableDialog.ui  PreferencesRemarkableDialog.ui  RemarkableWindow.ui  RemarkableWindow.ui~  about_remarkable_dialog.xml  preferences_remarkable_dialog.xml  remarkable_window.xml
debian/: changelog  control  md5sums  postinst  prerm  remarkable.mime
markdown/extensions/: Highlighting.py  Strikethrough.py  emoji.py  markdown_checklist.py  mathjax.py  subscript.py  superscript.py  urlize.py
pdfkit/: LICENSE  source.py
remarkable/: AboutRemarkableDialog.py  PreferencesRemarkableDialog.py  RecentFilesMenu.py  RemarkableWindow.py  __init__.py  findBar.py  settings.py  styles.py  undobuffer.py
remarkable/markdown/extensions/: AutoLink.py  Checklist.py  Highlighting.py  MathJax.py  Strikethrough.py  Subscript.py  Superscript.py
remarkable_lib/: AboutDialog.py  Builder.py  Builder.py~  InsertTableDialog.py  PreferencesDialog.py  Window.py  __init__.py  helpers.py  helpers.py~  remarkableconfig.py  remarkableconfig.py~
