message('Installing Tutorial data')
install_data('MarkdownTutorial.md', install_dir : 'share/remarkable/media/')


message('Installing desktop icon')
install_data('remarkable.png', install_dir : 'share/icons/hicolor/256x256/apps')
install_data('remarkable.svg', install_dir : 'share/icons/hicolor/scaleable/apps/')
